--- a/GTA2/Base.lproj/Main.storyboard
+++ b/GTA2/Base.lproj/Main.storyboard
@@ -68,6 +68,14 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.95686274510000002" green="0.31764705879999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SFw-Cg-L5b">
+                                <rect key="frame" x="20" y="152" width="374" height="564"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="PrG-Fd-TxI"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Kay-eZ-Dc1"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -76,6 +84,7 @@
                     <connections>
                         <outlet property="emailLabel" destination="D1K-JA-Fof" id="pZc-cT-RNI"/>
                         <outlet property="registrationTypeLabel" destination="4DJ-Vp-lyp" id="rLY-FQ-ghx"/>
+                        <outlet property="tableView" destination="SFw-Cg-L5b" id="2Im-S3-pRH"/>
                         <outlet property="titleLabel" destination="LAm-Qb-doW" id="9Bh-H7-KKh"/>
                         <segue destination="JmN-MB-IzM" kind="presentation" identifier="loginView2" id="zQ6-I8-Bd2"/>
                     </connections>
